# blockspeed

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_roofline.ipynb  02_fewstep_repro.ipynb
results/: fewstep_tesla-t4_20260703T0249.json  roofline_tesla-t4_20260703T0155.json
src/blockspeed/: __init__.py  checkpoints.py  fewstep.py  roofline.py
src/blockspeed/harness/: __init__.py  entropy.py  judge.py  plots.py  selftest.py
